Stopped Navbar and Header Arrows from stretching infinitely Also removed header.php from /req as no longer needed

--- a/styles/style.less
+++ b/styles/style.less
@@ -77,9 +77,12 @@ header {
         margin: 0 5%;
         height: 56px;
         line-height: 56px;
+        display: flex;
+        justify-content: center;
         .logo {
             height: 56px;
             display: inline-block;
+            margin-right: 50px;
         }
         .nav {
             display: inline-block;
@@ -124,14 +127,13 @@ header {
             align-items: center;
             text-align: center;
             .arrow {
-                padding: 100px;
+                padding: 125px;
             }
             .arrow:hover {
                 color: #c7b29a;
             }
             .text {
                 width: 600px;
-                margin: 0 auto;
                 p {
                     width: 550px;
                     margin: 20px auto;
@@ -139,62 +141,11 @@ header {
             }
         }
     }
-/*
-    form {
-        display:flex;
-        justify-content:center;
-        align-items:flex-end;
-        left: 0;
-        top: 80%;
-        width:100%;
-        height:20%;
-        input {
-            margin: 0 10px;
-            margin-bottom: 40px;
-        }
-        label {
-            position: relative;
-            cursor: pointer;
-            line-height: 20px;
-            display: inline-block;
-            color: #666;
-        }
-        label::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 18px;
-            height: 18px;
-            border: 1px solid #ddd;
-            border-radius: 100%;
-            background: #fff;
-        }
-        label::after {
-            content: '';
-            width: 12px;
-            height: 12px;
-            background: #F87DA9;
-            position: absolute;
-            top: 4px;
-            left: 4px;
-            border-radius: 100%;
-            -webkit-transition: all 0.2s ease;
-            transition: all 0.2s ease;
-        }
-        input:checked + label:after {
-            opacity: 1;
-            -webkit-transform: scale(1);
-            transform: scale(1);
-        }
-        input:not(:checked) + label:after {
-            opacity: 0;
-            -webkit-transform: scale(0);
-            transform: scale(0);
-        }
-    }
-*/
 }
+
+//------------------ Footer ------------------\\
+
+
 
 //------------------ Sections ------------------\\
 
@@ -233,8 +184,8 @@ header {
     flex-direction: column;
     align-items: center;
     img {
-        height: 100%;
-        width: 75%;
+        min-width: 25%;
+        max-width: 85%;
     }
     h1 {
         color:  #555;
@@ -251,8 +202,6 @@ header {
         max-width: 700px;
     }
 }
-
-//------------------ Footer ------------------\\
 
 //------------------ Main ------------------\\
 
